--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 04:39:00 PM</p>
+    <p class="lastupdate">09/06/2020 04:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.804 inHg (-0.066)</td>
+        <td class="data">29.804 inHg (-0.064)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">1 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.2&#176;F</td>
+        <td class="data">90.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">34%</td>
+        <td class="data">33%</td>
       </tr>
     </tbody>
   </table>
@@ -305,20 +305,20 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="04:27:02 PM">
-            29.803</span>
+          <span title="04:39:02 PM">
+            29.802</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="04:27:02 PM (Sunday)">
-            29.803</span>
+          <span title="04:39:02 PM (Sunday)">
+            29.802</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/06/2020 04:27:02 PM">
-            29.803</span>
+          <span title="09/06/2020 04:39:02 PM">
+            29.802</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          12
+          13
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          12
+          13
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:35:02 PM">
-            90.2</span><br/>
+          <span title="04:42:02 PM">
+            90.3</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:35:02 PM (Sunday)">
-            90.2</span><br/>
+          <span title="04:42:02 PM (Sunday)">
+            90.3</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 1 hour, 52 minutes</td>
+      <td class="data">5 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 1 hour, 52 minutes</td>
+      <td class="data">5 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
