--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 04:49:00 PM</p>
+    <p class="lastupdate">09/06/2020 04:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">117.0&#176;F</td>
+        <td class="data">116.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">117.0&#176;F</td>
+        <td class="data">116.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">117.0&#176;F</td>
+        <td class="data">116.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.806 inHg (-0.059)</td>
+        <td class="data">29.803 inHg (-0.059)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">1 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.4&#176;F</td>
+        <td class="data">90.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:46:02 PM">
-            90.4</span><br/>
+          <span title="04:50:02 PM">
+            90.5</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:46:02 PM (Sunday)">
-            90.4</span><br/>
+          <span title="04:50:02 PM (Sunday)">
+            90.5</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 2 hours, 2 minutes</td>
+      <td class="data">5 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 2 hours, 2 minutes</td>
+      <td class="data">5 days, 2 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
