--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 04:59:00 PM</p>
+    <p class="lastupdate">09/06/2020 05:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">116.7&#176;F</td>
+        <td class="data">116.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">116.7&#176;F</td>
+        <td class="data">116.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">116.7&#176;F</td>
+        <td class="data">116.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.1&#176;F</td>
+        <td class="data">46.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.802 inHg (-0.059)</td>
+        <td class="data">29.802 inHg (-0.055)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">1 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.6&#176;F</td>
+        <td class="data">90.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -237,14 +237,14 @@
         <td class="data new_row hilo_day">
           <span title="11:23:52 AM">
             56.3</span><br/>
-          <span title="12:02:45 AM">
-            44.8</span>
+          <span title="04:59:20 PM">
+            43.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:23:52 AM (Sunday)">
             56.3</span><br/>
-          <span title="12:02:45 AM (Sunday)">
-            44.8</span>
+          <span title="04:59:20 PM (Sunday)">
+            43.3</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="07:12:31 AM">
             49</span><br/>
-          <span title="03:56:08 PM">
-            10</span>
+          <span title="04:59:20 PM">
+            9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:12:31 AM (Sunday)">
             49</span><br/>
-          <span title="03:56:08 PM (Sunday)">
-            10</span>
+          <span title="04:59:20 PM (Sunday)">
+            9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/06/2020 03:56:08 PM">
-            10</span>
+          <span title="09/06/2020 04:59:20 PM">
+            9</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -305,20 +305,20 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="04:55:02 PM">
-            29.801</span>
+          <span title="05:02:02 PM">
+            29.800</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="04:55:02 PM (Sunday)">
-            29.801</span>
+          <span title="05:02:02 PM (Sunday)">
+            29.800</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/06/2020 04:55:02 PM">
-            29.801</span>
+          <span title="09/06/2020 05:02:02 PM">
+            29.800</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          12
+          13
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          12
+          13
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:56:02 PM">
-            90.6</span><br/>
+          <span title="05:03:02 PM">
+            90.7</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:56:02 PM (Sunday)">
-            90.6</span><br/>
+          <span title="05:03:02 PM (Sunday)">
+            90.7</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 2 hours, 12 minutes</td>
+      <td class="data">5 days, 2 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 2 hours, 12 minutes</td>
+      <td class="data">5 days, 2 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
