--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/06/2020 05:19:00 PM</p>
+    <p class="lastupdate">09/06/2020 05:24:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">115.7&#176;F</td>
+        <td class="data">115.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">115.7&#176;F</td>
+        <td class="data">115.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">115.7&#176;F</td>
+        <td class="data">115.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.4&#176;F</td>
+        <td class="data">45.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.802 inHg (-0.051)</td>
+        <td class="data">29.800 inHg (-0.048)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">90.8&#176;F</td>
+        <td class="data">90.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">33%</td>
+        <td class="data">32%</td>
       </tr>
     </tbody>
   </table>
@@ -305,20 +305,20 @@
         <td class="data new_row hilo_day">
           <span title="09:59:02 AM">
             29.954</span><br/>
-          <span title="05:02:02 PM">
-            29.800</span>
+          <span title="05:19:02 PM">
+            29.799</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:59:02 AM (Sunday)">
             29.954</span><br/>
-          <span title="05:02:02 PM (Sunday)">
-            29.800</span>
+          <span title="05:19:02 PM (Sunday)">
+            29.799</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/06/2020 05:02:02 PM">
-            29.800</span>
+          <span title="09/06/2020 05:19:02 PM">
+            29.799</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          12
+          13
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          12
+          13
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="05:15:02 PM">
-            90.8</span><br/>
+          <span title="05:21:02 PM">
+            90.9</span><br/>
           <span title="07:46:01 AM">
             77.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="05:15:02 PM (Sunday)">
-            90.8</span><br/>
+          <span title="05:21:02 PM (Sunday)">
+            90.9</span><br/>
           <span title="07:46:01 AM (Sunday)">
             77.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">5 days, 2 hours, 32 minutes</td>
+      <td class="data">5 days, 2 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">5 days, 2 hours, 32 minutes</td>
+      <td class="data">5 days, 2 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
